# x-circle-x

./: .gitignore  CIRCLE_MANAGER_BUILD_GUIDE.md  CIRCLE_MANAGER_PROGRESS.md  CONTRACTS_ADDRESSES.md  CONTRACTS_STATUS.md  CONTRIBUTING.md  DEPLOY_INSTRUCTIONS.md  GITHUB_SETUP.md  LICENSE  PLAN.md  PLAN_STARTER_BONUS_NFT.md  PROGRESS_REPORT.md  PROGRES_SESSION.md  PROJET_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  README_INTEGRATION.md  RESUME_EXECUTIF_FR.md  ROADMAP.md  SESSION_SUMMARY.md  UPGRADE_GUIDE.md  WASM_SIZE_ISSUE_FINDINGS.md  WHITEPAPER.md  info.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
branding/: info.json
contracts/: build-all.sh
contracts/circle-manager/: Cargo.toml  README.md  build.sh  deploy.py  multicontract.toml  multiversx.json
contracts/circle-manager-temp/: Cargo.toml
contracts/circle-manager-temp/meta/: Cargo.toml
contracts/circle-manager-temp/meta/src/: main.rs
contracts/circle-manager-temp/scenarios/: circle_manager_temp.scen.json
contracts/circle-manager-temp/src/: circle_manager_temp.rs
contracts/circle-manager-temp/tests/: circle_manager_temp_scenario_go_test.rs  circle_manager_temp_scenario_rs_test.rs
contracts/circle-manager/meta/: Cargo.toml
contracts/circle-manager/meta/src/: main.rs
contracts/circle-manager/src/: lib.rs  lib_backup.rs
contracts/circle-manager/wasm/: Cargo.toml
contracts/circle-manager/wasm/src/: lib.rs
contracts/test-adder/interactor/: Cargo.toml
contracts/test-adder/interactor/src/: basic_interactor.rs  basic_interactor_cli.rs  basic_interactor_config.rs  basic_interactor_state.rs
contracts/test-adder/interactor/tests/: basic_interactor_cs_test.rs
contracts/xcirclex-nft/: Cargo.toml  svg-preview.html
contracts/xcirclex-nft/meta/: Cargo.toml
contracts/xcirclex-nft/meta/src/: main.rs
contracts/xcirclex-nft/src/: lib.rs
contracts/xcirclex-nft/wasm/: Cargo.toml
contracts/xcirclex-nft/wasm/src/: lib.rs
dapp/: README.md  index.html  package.json  tsconfig.node.json
docs/: BUSINESS_PLAN.md
docs-dev/: CIRCLE_OF_LIFE_ARCHITECTURE.md
frontend/: .env.example  README.md  index.html  package.json  postinstall.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
nft-assets/: INSTRUCTIONS_PINATA.md  generate_gifs.py  generate_gifs_v2.py  imgur_urls.json  (+11 more)
(+213 files in other folders)
