[package]
name = "circle-manager-temp"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/circle_manager_temp.rs"

[dependencies.multiversx-sc]
version = "0.56.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.1"

[workspace]
members = [
    ".",
    "meta",
]
