[package]
name = "circle-manager"
version = "0.1.0"
authors = ["xCircle DAO Contributors"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.56.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.1"

[workspace]
members = [
    ".",
    "meta",
]
