[package]
name = "xcirclex-nft"
version = "0.1.0"
authors = ["X-CIRCLE-X DAO"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.62.0"

[dependencies.multiversx-sc-modules]
version = "0.62.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
