[package]
name = "circle-manager-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false

[dependencies.circle-manager]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.49.0"

[workspace]
members = ["."]
